// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-3 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <span
      aria-disabled="false"
      class="emotion-3 emotion-4"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly bordered 1`] = `
<DocumentFragment>
  .emotion-1 {
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 8px;
  border: 1px solid #d4dae7;
}

.emotion-3 {
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <span
      aria-disabled="false"
      class="emotion-3 emotion-4"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;

exports[`Tag renders correctly disabled 1`] = `
<DocumentFragment>
  .emotion-1 {
  opacity: 0.5;
  border-radius: 4px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: #f6f5f7;
  height: 24px;
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-3 {
  opacity: 0.5;
  color: #4a4f62;
  font-size: 14px;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  max-width: 350px;
  overflow: hidden;
  white-space: pre;
  text-overflow: ellipsis;
}

<div
    class="emotion-0 emotion-1 emotion-2"
  >
    <span
      aria-disabled="true"
      class="emotion-3 emotion-4"
    >
      test
    </span>
  </div>
</DocumentFragment>
`;
